k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    tls:
        - hosts:
              - lawrencecymbura.com
              - www.lawrencecymbura.com
          secretName: lawrencecymbura-com
    rules:
        - host: lawrencecymbura.com
          http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-cluster-ip-service
                        servicePort: 5000
        - host: www.lawrencecymbura.com
          http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-cluster-ip-service
                        servicePort: 5000
